# argparse-usage

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  zizmor.yml
.opencode/: opencode.json
examples/: README.md  basic_usage.py  complex_usage.py
src/argparse_usage/: __init__.py  _argparse.py  _usage.py  ast.py  formatter.py  generator.py  kdl_utils.py  parser.py
tests/: __init__.py  test_argparse_to_spec.py  test_generator.py  test_spec_to_kdl.py
tests/fixtures/: __init__.py  simple_parsers.py
