[project]
name = "argparse-usage"
version = "0.1.1"
description = "Generate usage spec KDL files from Python argparse.ArgumentParser"
readme = "README.md"
authors = [
    { name = "acidghost", email = "1787979+acidghost@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
